HOTFIX: avoid collapsing of margins
avoid collapsing of margins, which happens sometimes(!) for image items on top right position

--- a/sass/web.site/modules/teaser/_teaser-author-list.sass
+++ b/sass/web.site/modules/teaser/_teaser-author-list.sass
@@ -8,6 +8,8 @@
 	&__item
 		@include break-inside(avoid)
 		border-bottom: 1px solid #eee
+		// avoid collapsing of margins, which happens sometimes(!) for image items on top right position
+		padding-top: 1px
 
 .zon-author-list
 	list-style: none
